--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
   <body>
     <!-- do not modify this file -->
-    <div id="output">world</div>
+    <div id="output"></div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
