--- a/main.html
+++ b/main.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 
-<html>
+<!--<html>
   <head>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <!-- do not modify this file -->
-    <div id="output"> </div>
+    <!--<div id="output"> </div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
+</html>-->
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Promise Example</title>
+</head>
+<body>
+<h1>Promise Example</h1>
+<p>The message will appear below after 1 second:</p>
+<p id="output"></p>
+<script src="app.js"></script>
+</body>
 </html>
